<resources>
    <string name="app_name">RecoveryApp</string>

    <string name="text_label_home">Home</string>
    <string name="text_label_exercises">Ćwiczenia</string>
    <string name="text_label_workout">Trening</string>
    <string name="text_label_profile">Profil</string>

    <string name="text_label_more">More</string>
    <string name="text_label_about_as">O nas</string>
    <string name="text_label_info">About as</string>
    <string name="text_label_settings">Ustawienia</string>
    <string name="text_label_help">Pomoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planing">Planing</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="profil_u_ytkownika">Profil użytkownika</string>
    <string name="nazwisko">nazwisko</string>
    <string name="imie">imie</string>
    <string name="historia_wicze">Historia ćwiczeń</string>
    <string name="planowanie">Planowanie</string>
    <string name="foto">foto</string>
    <string name="statystyki">Statystyki</string>
    <string name="user">user</string>
    <string name="wiczenia">ćwiczenia</string>
    <string name="Ćwiczenia">Ćwiczenia</string>


    <string name="text_view_choose_workout">Wybór treningu rehabilitacyjnego:</string>
    <string name="text_view_choose_category_of_workout">Wybór kategorii treningu:</string>
    <string name="title_activity_workout_start">WorkoutStartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_summary_workout">SummaryWorkoutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="app_header">Aplikacja</string>
    <string name="notifications_header">Powiadomienia</string>

    <!-- App Preferences -->
    <string name="signature_title">Twoje imię</string>
    <string name="song_title">Domyślna piosenka treningowa</string>

    <!-- Notifications Preferences -->
    <string name="notifications_title">Włącz powiadomienia</string>
    <string name="notification_title">Częstość powiadomień</string>
    <string name="notification_time_title">Godzina</string>


    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--help-->
    <string name="help_form">Napisz o co chodzi.</string>
</resources>