<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/text_label_home"/>
    <item
        android:id="@+id/exercises"
        android:enabled="true"
        android:icon="@drawable/baseline_sports_kabaddi_black_24dp"
        android:title="@string/text_label_exercises"/>
    <item
        android:id="@+id/work"
        android:enabled="true"
        android:icon="@drawable/baseline_fitness_center_black_24dp"
        android:title="@string/text_label_workout"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/text_label_profile"/>
</menu>