<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toTopOf="@+id/textName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfile"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="387dp"
        android:layout_height="43dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/ubuntu_light"

        android:text="@string/profil_u_ytkownika"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:layout_marginTop="336dp"
        android:text="@string/imie"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textSecondName"
        android:layout_width="135dp"
        android:layout_height="35dp"
        android:layout_marginTop="56dp"
        android:text="@string/nazwisko"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"

        android:text="@string/historia_wicze"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btn_planing"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSecondName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_planing"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/planowanie"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stats" />

    <Button
        android:id="@+id/btn_stats"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/statystyki"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSecondName" />

</androidx.constraintlayout.widget.ConstraintLayout>